# minijava-compiler

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  driver.hh  location.hh  main.cpp  parser.cpp  parser.hh  parser.output  parser.y  reqs-draft.md  sample  scanner.cpp  scanner.l
Driver/: driver.cpp  driver.hh
Exception/: LocalizedError.h
Exception/Impl/: LocalizedError.cpp
IR/: CMakeLists.txt  include.h
IR/address/: Address.h  AddressInFrame.cpp  AddressInFrame.h  AddressInRegister.cpp  AddressInRegister.h
IR/frame/: FrameTranslator.cpp  FrameTranslator.h
IR/nodes/: BaseElement.h  ExpressionList.cpp  ExpressionList.h
IR/nodes/expressions/: BinopExpression.cpp  BinopExpression.h  CallExpression.cpp  CallExpression.h  ConstExpression.cpp  ConstExpression.h  EseqExpression.cpp  EseqExpression.h  MemExpression.cpp  MemExpression.h  NameExpression.cpp  NameExpression.h  TempExpression.cpp  TempExpression.h
IR/nodes/statements/: ExpStatement.cpp  ExpStatement.h  JumpConditionalStatement.cpp  JumpConditionalStatement.h  JumpStatement.cpp  JumpStatement.h  LabelStatement.cpp  LabelStatement.h  MoveStatement.cpp  MoveStatement.h  SeqStatement.cpp  SeqStatement.h
IR/tree_wrapper/: ExpressionWrapper.cpp  ExpressionWrapper.h  StatementWrapper.cpp  StatementWrapper.h  SubtreeWrapper.h
IR/tree_wrapper/conditional_wrappers/: AndConditionalWrapper.cpp  AndConditionalWrapper.h  ConditionalWrapper.cpp  ConditionalWrapper.h  NegateConditionalWrapper.cpp  NegateConditionalWrapper.h  OrConditionalWrapper.cpp  OrConditionalWrapper.h  RelativeConditionalWrapper.cpp  RelativeConditionalWrapper.h
IR/types/: BinaryOperatorType.cpp  BinaryOperatorType.h  LogicOperatorType.cpp
IR/visitors/: DoubleCallEliminateVisitor.cpp  DoubleCallEliminateVisitor.h  EseqEliminationVisitor.cpp  EseqEliminationVisitor.h  LinearizationVisitor.cpp  LinearizationVisitor.h  PrintVisitor.cpp  PrintVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  Visitor.h  VisitorStruct.h
Nodes/: Nodes.h
Nodes/NodesHeaders/: Node.h  Program.h
Nodes/NodesHeaders/Decls/: Class.h  Formal.h  MemberDeclaration.h  MethodDeclaration.h  Type.h  VarDeclaration.h
Nodes/NodesHeaders/Expressions/: Add.h  And.h  At.h  BinaryOp.h  BooleanLiteral.h  Div.h  Equals.h  Expression.h  Identifier.h  Length.h  Less.h  MethodInvocation.h  More.h  Mul.h  New.h  NewArray.h  Not.h  Number.h  Or.h  Percent.h  Subtract.h  This.h
Nodes/NodesHeaders/Statements/: Assert.h  Assign.h  If.h  Lvalue.h  Print.h  Return.h  Scope.h  Statement.h  Statements.h  While.h
Nodes/NodesImpl/: Node.cpp  Program.cpp
Nodes/NodesImpl/Decls/: Class.cpp  Formal.cpp  MethodDeclaration.cpp  Type.cpp  VarDeclaration.cpp
Nodes/NodesImpl/Expressions/: Add.cpp  And.cpp  At.cpp  BinaryOp.cpp  BooleanLiteral.cpp  Div.cpp  Equals.cpp  Expression.cpp  Identifier.cpp  Length.cpp  Less.cpp  MethodInvocation.cpp  More.cpp  Mul.cpp  New.cpp  NewArray.cpp  Not.cpp  Number.cpp  Or.cpp  Percent.cpp  Subtract.cpp  This.cpp
Nodes/NodesImpl/Statements/: Assert.cpp  Assign.cpp  If.cpp  Lvalue.cpp  Print.cpp  Return.cpp  Scope.cpp  Statements.cpp  While.cpp
Parser/: location.hh  parser.cpp  parser.hh  parser.output  parser.y  scanner.cpp  scanner.l
Samples/: ASTtest.mjava  ASTtest.mjava.gv  array.mjava  array.mjava.gv  back_and_forth.mjava  back_and_forth.mjava.ir.txt  class_redecl.mjava  complicated_rec.mjava  complicated_rec.mjava.ir.txt  correct_var_redecl.mjava  errors_location.mjava  factorial.mjava  factorial.mjava.gv  factorial.mjava.ir.txt  fields.mjava  ir_sample.mjava  ir_sample.mjava.ir.txt  method_redecl.mjava  rec_factorial.mjava  rec_factorial.mjava.ir.txt  same_method_in_diff_classes.mjava  shadowing.mjava  simple_loop.mjava  simple_loop.mjava.ir.txt  undeclared_variable.mjava  var_redeclaration.mjava
SymbolTables/: ClassTable.h  ProgramTable.h  ScopeTable.h  SymbolTableBuilder.h
SymbolTables/Impl/: ClassTable.cpp  ProgramTable.cpp  ScopeTable.cpp  SymbolTableBuilder.cpp
Visitors/: AcceptRetType.h  Dumper.h  IRTBuilder.h  Interpreter.h  SymbolTableBuilder.h  TrueSymbolTableBuilder.h  Typer.h  Visitor.h
Visitors/Impl/: Dumper.cpp  IRTBuilder.cpp  Interpreter.cpp  SAMPLEIrtreeBuildVisitor.cpp  SymbolTableBuilder.cpp  TrueSymbolTableBuilder.cpp  Typer.cpp
Visitors/SymbolTables/: ClassTable.h  ProgramTable.h  ScopeTable.h  SymbolTableBuilder.h
Visitors/SymbolTables/Impl/: ClassTable.cpp  ProgramTable.cpp  ScopeTable.cpp  SymbolTableBuilder.cpp
